# broker-http-proxy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.yaml
.github/workflows/: ci.yml  docker-release.yml  helm-release.yml
broker-2-http/: Cargo.toml  conf.yaml
broker-2-http/chart/: values.yaml
broker-2-http/chart/broker-2-http/: Chart.yaml  values.yaml
broker-2-http/chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  tls-secrets.yaml
broker-2-http/src/: amqp_consumer.rs  amqp_manager.rs  broadcaster.rs  configuration.rs  lib.rs  main.rs  startup.rs  webapp.rs
broker-2-http/src/routes/: health_check.rs  mod.rs  not_found.rs  subscribe.rs
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service-account.yaml  service.yaml  tls-secrets.yaml
charts/broker-2-http/: values.yaml
charts/broker-2-http/templates/: NOTES.txt  deployment.yaml  service-account.yaml
charts/http-2-broker/: Chart.yaml  README.md  values.yaml
charts/http-2-broker/templates/: NOTES.txt
http-2-broker/: Cargo.toml  conf.yaml
http-2-broker/chart/: README.md  values.yaml
http-2-broker/chart/http-2-broker/templates/: service-account.yaml
http-2-broker/chart/templates/: _helpers.tpl  deployment.yaml
http-2-broker/src/: configuration.rs  main.rs
shared-deps/: Cargo.toml
shared-deps/src/: configuration.rs  intersect_messaging.rs  lib.rs  signals.rs  telemetry.rs
shared-deps/src/protocols/: amqp.rs
