[package]
name = "broker-2-http"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "broker-2-http"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "broker-2-http"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
amqprs = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde-aux = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
intersect-ingress-proxy-common = { path = "../shared-deps", version = "0.1.0" }
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
headers = "0.4.0"
hyper = "1.3.1"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["request-id", "tracing", "trace", "util"] }
uuid = { version = "1.9.1", features = ["v4"] }
amqp_serde = "0.4.1"
sysinfo = "0.30.12"
