[package]
name = "intersect-ingress-proxy-common"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.86"
amqprs = { workspace = true }
async-stream = "0.3.5"
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
futures = "0.3.30"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { workspace = true }
